# backwards-generation

./: .gitignore  README.md  REPORT.md  backward_sampling_plan.md  pyproject.toml
logs/conversation/: 01_initial_implementation.md  02_probability_math_audit.md  03_forward_prompt_heuristic.md  04_reversed_sequence_heuristic.md  05_sandbox_test.jsonl  05_sandbox_test.md  06_archive_logs.jsonl  06_archive_logs.md  README.md
scripts/: backward_generate.py  debug_paris.py  debug_scores.py  jsonl_to_markdown.py  precompute_bigrams.py
src/backward_sampler/: __init__.py  bigram.py  sampler.py  utils.py
tests/: test_sampler.py
